--- a/GenLevelAnalyzer/test/mymulticrab.cfg
+++ b/GenLevelAnalyzer/test/mymulticrab.cfg
@@ -18,18 +18,21 @@ cfg=mycrab.cfg
 #GRID.ce_black_list = T3
 
 CMSSW.total_number_of_events=-1
-CMSSW.events_per_job = 100000
+CMSSW.events_per_job = 10000
 
-[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_part1]
+#[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_part1]
+#CMSSW.dbs_url = phys03
+#CMSSW.datasetpath=/DiPhotonJetsBox_Pt_32_20_dR_0p4_GENSIMRAWHLT/peruzzi-DiPhotonJetsBox_Pt_32_20_dR_0p4_AODSIM-20086e8d0a66db875ecdae74c92b5009/USER
+#[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_part2]
+#CMSSW.dbs_url = phys03
+#CMSSW.datasetpath=/DiPhotonJetsBox_Pt_32_20_dR_0p4/peruzzi-DiPhotonJetsBox_Pt_32_20_dR_0p4_AODSIM-20086e8d0a66db875ecdae74c92b5009/USER
+#[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_scaleup]
+#CMSSW.dbs_url = phys03
+#CMSSW.datasetpath=/DiPhotonJetsBox_Sherpa_7TeV_METS_Up/peruzzi-DiPhotonJetsBox_Sherpa_7TeV_METS_Up-4ca40b209837d496b91e5db46aaedbe8/USER
+#[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_scaledown]
+#CMSSW.dbs_url = phys03
+#CMSSW.datasetpath=/DiPhotonJetsBox_Sherpa_7TeV_METS_Down/peruzzi-DiPhotonJetsBox_Sherpa_7TeV_METS_Down-55f566ca9b2f504baf2581fdc492231d/USER
+[aMCatNLO_gamgam01j_NLO_FXFX_7TeV]
 CMSSW.dbs_url = phys03
-CMSSW.datasetpath=/DiPhotonJetsBox_Pt_32_20_dR_0p4_GENSIMRAWHLT/peruzzi-DiPhotonJetsBox_Pt_32_20_dR_0p4_AODSIM-20086e8d0a66db875ecdae74c92b5009/USER
-[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_part2]
-CMSSW.dbs_url = phys03
-CMSSW.datasetpath=/DiPhotonJetsBox_Pt_32_20_dR_0p4/peruzzi-DiPhotonJetsBox_Pt_32_20_dR_0p4_AODSIM-20086e8d0a66db875ecdae74c92b5009/USER
-[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_scaleup]
-CMSSW.dbs_url = phys03
-CMSSW.datasetpath=/DiPhotonJetsBox_Sherpa_7TeV_METS_Up/peruzzi-DiPhotonJetsBox_Sherpa_7TeV_METS_Up-4ca40b209837d496b91e5db46aaedbe8/USER
-[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_scaledown]
-CMSSW.dbs_url = phys03
-CMSSW.datasetpath=/DiPhotonJetsBox_Sherpa_7TeV_METS_Down/peruzzi-DiPhotonJetsBox_Sherpa_7TeV_METS_Down-55f566ca9b2f504baf2581fdc492231d/USER
-
+CMSSW.datasetpath=/aMCatNLO_gamgam01j_NLO_FXFX_7TeV/peruzzi-aMCatNLO_gamgam01j_NLO_FXFX_7TeV_GEN-cda13aed8a1fe5b5c459c4ddb17e5737/USER
+CMSSW.pycfg_params = doLHE=True
