GenLevelAcceptance removed, now mantained in peruzzim/diphoton

--- a/GenLevelAnalyzer/test/mycrab.cfg
+++ b/GenLevelAnalyzer/test/mycrab.cfg
@@ -15,11 +15,11 @@ pycfg_params            = noprint
 copy_data = 1
 storage_element = T3_CH_PSI
 storage_path = /srm/managerv2?SFN=/pnfs/psi.ch/cms/trivcat/store/user/peruzzi/
-user_remote_dir = /GenLevelStudies/GenLevelAnalyzer_v03
+user_remote_dir = /GenLevelStudies/GenLevelAnalyzer_v04
 
 [SGE]
 # please always specify the queue name
-queue = short.q
+queue = all.q
 
 [GRID]
 proxy_server            = myproxy.cern.ch 
