--- a/GenLevelAnalyzer/test/mymulticrab.cfg
+++ b/GenLevelAnalyzer/test/mymulticrab.cfg
@@ -18,7 +18,7 @@ cfg=mycrab.cfg
 #GRID.ce_black_list = T3
 
 CMSSW.total_number_of_events=-1
-CMSSW.events_per_job = 10000
+CMSSW.events_per_job = 50000
 
 #[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_part1]
 #CMSSW.dbs_url = phys03
@@ -32,7 +32,11 @@ CMSSW.events_per_job = 10000
 #[DiPhotonJetsBox_Pt_32_20_dR_04_7TeV_sherpa_AODSIM_scaledown]
 #CMSSW.dbs_url = phys03
 #CMSSW.datasetpath=/DiPhotonJetsBox_Sherpa_7TeV_METS_Down/peruzzi-DiPhotonJetsBox_Sherpa_7TeV_METS_Down-55f566ca9b2f504baf2581fdc492231d/USER
-[aMCatNLO_gamgam01j_NLO_FXFX_7TeV]
+#
+[aMCatNLO_gamgam01j_NLO_FXFX_7TeV_TuneCUETP8M1]
 CMSSW.dbs_url = phys03
-CMSSW.datasetpath=/aMCatNLO_gamgam01j_NLO_FXFX_7TeV/peruzzi-aMCatNLO_gamgam01j_NLO_FXFX_7TeV_GEN-cda13aed8a1fe5b5c459c4ddb17e5737/USER
+CMSSW.datasetpath=/aMCatNLO_gamgam01j_NLO_FXFX_7TeV_LHE/peruzzi-aMCatNLO_gamgam01j_NLO_FXFX_7TeV_TuneCUETP8M1_GEN-fb44adccb7aed743581ea8e3c160c17a/USER
 CMSSW.pycfg_params = doLHE=True
+[DiPhotonBox_Pt10To500_TuneCUETP8M1_7TeV_pythia8]
+CMSSW.dbs_url = phys03
+CMSSW.datasetpath=/DiPhotonBox_Pt10To500_TuneCUETP8M1_7TeV_pythia8/peruzzi-DiPhotonBox_Pt10To500_TuneCUETP8M1_7TeV_pythia8-1256986bfc85cfba7f10bc29076a5f84/USER 
